[package]
name = "rainbow"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda = "0.2"
netlify_lambda_http = "0.2"
photon-rs = "0.3.1"
tokio = { version = "1.0.1", features = ["macros"] }
